--- a/src/components/Stamps/Stamps.css
+++ b/src/components/Stamps/Stamps.css
@@ -1,11 +1,11 @@
-/* .container{
+.container{
     display:flex;
     flex-wrap: wrap;
     padding-bottom:15px;
     width:75%;
     position:relative;
-    background-image: url("/images/shipengine.jpg")
-} */
+    background-image: url("/images/starrysky.jpg")
+}
 
 .btn-link{
     top:50%;
