--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .header {
-    background-color: darkblue;
+    background-color: darkslategrey;
     background-repeat: repeat;
     background-size: auto;
-    color: gray;
+    color: black;
     padding-top: 25px;
     padding-bottom: 25px;
     min-height: 100px;
@@ -16,15 +16,15 @@
   }
 
   .logo-button {
-      width: 100%;
+      /* width: 100%; */
       padding: 0;
-      background-color: blue;
-      border: 1px solid white;
+      background-color: darkslategrey;
+      /* border: 1px solid white; */
   }
 
   .logo-button{
-      background-color: lightblue;
-      border: 1px solid black;
+      background-color: darkslategrey;
+      /* border: 1px solid black; */
   }
 
   #popover-positioned-left{
